--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A LiveView Component for phone number input fields",
   "author": "whitepaperclip",
   "license": "MIT",
-  "main": "./priv/static/live_phone.js",
+  "main": "./assets/live_phone.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/whitepaperclip/live_phone.git"
