--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -22,6 +22,7 @@ jobs:
     - run: |
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
 
     - name: Set up Elixir
       uses: erlef/setup-elixir@v1
