--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -40,12 +40,11 @@ jobs:
     - name: Install dependencies
       run: mix deps.get
 
+    - name: Copy static assets
+      run: "${GITHUB_WORKSPACE}/copy-static.sh"
+
     - name: Check compiler warnings
       run: mix compile --warnings-as-errors
-
-    - name: Compile front-end
-      run: |
-        mix phx.digest
 
     - name: Run tests
       run: mix test --include browser
