--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,9 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: setup-chromedriver
-      uses: nanasess/setup-chromedriver@v1.0.1
+    - uses: nanasess/setup-chromedriver@v1
     - run: |
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
@@ -27,8 +25,8 @@ jobs:
     - name: Set up Elixir
       uses: erlef/setup-elixir@v1
       with:
-        elixir-version: '1.12.3' # Define the elixir version [required]
-        otp-version: '23.2' # Define the OTP version [required]
+        elixir-version: '1.14.0' # Define the elixir version [required]
+        otp-version: '25.0' # Define the OTP version [required]
 
     - name: Restore dependencies cache
       uses: actions/cache@v2
